<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="add_feed">Add feed</string>
  <string name="title_activity_edit_feed">Subscribe to feed</string>
  <string name="url">URL</string>
  <string name="tag">Tag</string>
  <string name="add_feed_search_hint">URL to feed</string>
  <string name="title">Title</string>

...
